syntax = "proto3";

package crdt;

// CRDT 同步服务
service CrdtService {
  // 同步数据变更
  rpc Sync(SyncRequest) returns (SyncResponse);

  // 合并状态
  rpc Merge(MergeRequest) returns (MergeResponse);

  // 获取当前状态
  rpc GetState(GetStateRequest) returns (GetStateResponse);

  // 获取状态哈希
  rpc GetStateHash(GetStateHashRequest) returns (GetStateHashResponse);

  // 获取操作日志
  rpc GetOpLog(GetOpLogRequest) returns (GetOpLogResponse);

  // 获取操作历史
  rpc GetHistory(GetHistoryRequest) returns (GetHistoryResponse);

  // 获取冲突信息
  rpc GetConflicts(GetConflictsRequest) returns (GetConflictsResponse);

  // 健康检查
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// 同步请求
message SyncRequest {
  repeated Change changes = 1;
}

// 变更操作
message Change {
  string op = 1;
  string key = 2;
  optional string value = 3;
  optional int64 delta = 4;
}

// 同步响应
message SyncResponse {
  bool success = 1;
  string state_hash = 2;
  string message = 3;
}

// 合并请求
message MergeRequest {
  string from_node = 1;
  bytes state_data = 2; // JSON 序列化的状态
}

// 合并响应
message MergeResponse {
  bool success = 1;
  string state_hash = 2;
  string message = 3;
}

// 获取状态请求
message GetStateRequest {}

// 获取状态响应
message GetStateResponse {
  string node_id = 1;
  bytes state_data = 2; // JSON 序列化的状态
}

// 获取状态哈希请求
message GetStateHashRequest {}

// 获取状态哈希响应
message GetStateHashResponse {
  string state_hash = 1;
}

// 获取操作日志请求
message GetOpLogRequest {}

// 操作日志条目
message OpLogEntry {
  string id = 1;
  int64 timestamp = 2;
  string node_id = 3;
  string operation = 4;
  map<string, int64> causal_context = 5;
}

// 获取操作日志响应
message GetOpLogResponse {
  repeated OpLogEntry entries = 1;
}

// 获取操作历史请求
message GetHistoryRequest {}

// 历史条目
message HistoryEntry {
  string id = 1;
  int64 timestamp = 2;
  string operation_type = 3;
  string key = 4;
  string details = 5;
  string node_id = 6;
  map<string, int64> causal_context = 7;
}

// 获取操作历史响应
message GetHistoryResponse {
  repeated HistoryEntry entries = 1;
}

// 获取冲突请求
message GetConflictsRequest {}

// 冲突操作
message ConflictOperation {
  string id = 1;
  int64 timestamp = 2;
  string node_id = 3;
  string details = 4;
}

// 冲突信息
message Conflict {
  string key = 1;
  string conflict_type = 2;
  repeated ConflictOperation operations = 3;
  string resolution = 4;
}

// 获取冲突响应
message GetConflictsResponse {
  repeated Conflict conflicts = 1;
}

// 健康检查请求
message HealthCheckRequest {}

// 健康检查响应
message HealthCheckResponse {
  string status = 1;
  int64 timestamp = 2;
}
