use anyhow::Result;

// å¼•å…¥ç”Ÿæˆçš„ protobuf ä»£ç 
pub mod crdt {
    tonic::include_proto!("crdt");
}

use crdt::crdt_service_client::CrdtServiceClient;
use crdt::*;

#[tokio::main]
async fn main() -> Result<()> {
    // è¿æ¥åˆ° gRPC æœåŠ¡å™¨
    let mut client = CrdtServiceClient::connect("http://127.0.0.1:50051").await?;

    println!("âœ… å·²è¿æ¥åˆ° gRPC æœåŠ¡å™¨");

    // 1. å¥åº·æ£€æŸ¥
    println!("\nğŸ“‹ æ‰§è¡Œå¥åº·æ£€æŸ¥...");
    let health_response = client
        .health_check(HealthCheckRequest {})
        .await?
        .into_inner();
    println!(
        "   çŠ¶æ€: {}, æ—¶é—´æˆ³: {}",
        health_response.status, health_response.timestamp
    );

    // 2. åŒæ­¥æ•°æ®å˜æ›´
    println!("\nğŸ“ åŒæ­¥æ•°æ®å˜æ›´...");
    let sync_response = client
        .sync(SyncRequest {
            changes: vec![
                Change {
                    op: "increment".to_string(),
                    key: "counter1".to_string(),
                    value: None,
                    delta: Some(5),
                },
                Change {
                    op: "set".to_string(),
                    key: "name".to_string(),
                    value: Some("Alice".to_string()),
                    delta: None,
                },
                Change {
                    op: "add".to_string(),
                    key: "tags".to_string(),
                    value: Some("rust".to_string()),
                    delta: None,
                },
            ],
        })
        .await?
        .into_inner();
    println!(
        "   æˆåŠŸ: {}, çŠ¶æ€å“ˆå¸Œ: {}",
        sync_response.success, sync_response.state_hash
    );

    // 3. è·å–çŠ¶æ€å“ˆå¸Œ
    println!("\nğŸ” è·å–çŠ¶æ€å“ˆå¸Œ...");
    let hash_response = client
        .get_state_hash(GetStateHashRequest {})
        .await?
        .into_inner();
    println!("   çŠ¶æ€å“ˆå¸Œ: {}", hash_response.state_hash);

    // 4. è·å–å½“å‰çŠ¶æ€
    println!("\nğŸ“Š è·å–å½“å‰çŠ¶æ€...");
    let state_response = client.get_state(GetStateRequest {}).await?.into_inner();
    println!("   èŠ‚ç‚¹ ID: {}", state_response.node_id);
    println!("   çŠ¶æ€æ•°æ®å¤§å°: {} å­—èŠ‚", state_response.state_data.len());

    // 5. è·å–æ“ä½œæ—¥å¿—
    println!("\nğŸ“œ è·å–æ“ä½œæ—¥å¿—...");
    let oplog_response = client.get_op_log(GetOpLogRequest {}).await?.into_inner();
    println!("   æ“ä½œæ—¥å¿—æ¡ç›®æ•°: {}", oplog_response.entries.len());
    for (i, entry) in oplog_response.entries.iter().take(5).enumerate() {
        println!(
            "   [{}] ID: {}, æ—¶é—´æˆ³: {}",
            i + 1,
            &entry.id[..12],
            entry.timestamp
        );
    }

    // 6. è·å–æ“ä½œå†å²
    println!("\nğŸ“– è·å–æ“ä½œå†å²...");
    let history_response = client.get_history(GetHistoryRequest {}).await?.into_inner();
    println!("   å†å²æ¡ç›®æ•°: {}", history_response.entries.len());
    for (i, entry) in history_response.entries.iter().take(5).enumerate() {
        println!(
            "   [{}] {}: {} - {}",
            i + 1,
            entry.operation_type,
            entry.key,
            entry.details
        );
    }

    // 7. è·å–å†²çªä¿¡æ¯
    println!("\nâš ï¸  è·å–å†²çªä¿¡æ¯...");
    let conflicts_response = client
        .get_conflicts(GetConflictsRequest {})
        .await?
        .into_inner();
    if conflicts_response.conflicts.is_empty() {
        println!("   æ— å†²çª");
    } else {
        println!("   å†²çªæ•°: {}", conflicts_response.conflicts.len());
        for (i, conflict) in conflicts_response.conflicts.iter().enumerate() {
            println!(
                "   [{}] é”®: {}, ç±»å‹: {}",
                i + 1,
                conflict.key,
                conflict.conflict_type
            );
            println!("       è§£å†³æ–¹æ¡ˆ: {}", conflict.resolution);
        }
    }

    println!("\nâœ… gRPC å®¢æˆ·ç«¯æµ‹è¯•å®Œæˆï¼");

    Ok(())
}
